--- a/jobMarket/src/app/role-dashboard/role-dashboard.component.html
+++ b/jobMarket/src/app/role-dashboard/role-dashboard.component.html
@@ -2,17 +2,19 @@
 <table id="roleTable">
         <tr>
             <th>Job Role</th>
-            <th>Rank Last 6 Months</th>
+            <th>Role Category</th>
+            <th>Rank This Year</th>
             <th>Rank Change</th>
-            <th>Median Salary Last 6 Months</th>
+            <th>Median Salary This Year</th>
             <th>Median Salary Change</th>
             <th>Historical Permanent Ads</th>
             <th>Live Job Vacancies</th>
         </tr>
         <tr *ngFor="let role of allRoles; let i = index">
-            <td>{{role.roleName}}</td>
+            <td><a routerLink="/role">{{role.roleName}}</a></td>
             <td>{{role.category}}</td>
-            <td *ngFor="let vacancy of allVacancies; let j = index" *ngIf="role.roleName == vacancy."></td>
+            <!-- this doesnt work: -->
+            <!-- <td *ngFor="let vacancy of allVacancies; let j = index" *ngIf="role.roleName == vacancy.role.roleName">{{}}</td> -->
         </tr>
     </table>
     
