--- a/jobMarket/src/app/role-dashboard/role-dashboard.component.html
+++ b/jobMarket/src/app/role-dashboard/role-dashboard.component.html
@@ -11,7 +11,8 @@
         <th>Live Job Vacancies</th>
     </tr>
     <tr *ngFor="let role of allRoles; let i = index">
-        <td><a routerLink="/role" (click)="loadOneRole(role.roleId)">{{role.roleName}}</a></td>
+        <!-- <td><a routerLink="/role/11" (click)="loadOneRole(role)">{{role.roleName}}</a></td> -->
+        <td><button (click)="loadOneRole(role)">{{role.roleName}}</button></td>
         <td>{{role.category}}</td>
         <!-- this doesnt work: -->
         <!-- <td *ngFor="let vacancy of allVacancies; let j = index" *ngIf="role.roleName == vacancy.role.roleName">{{}}</td> -->
