--- a/jobMarket/src/app/role/role.component.html
+++ b/jobMarket/src/app/role/role.component.html
@@ -1,2 +1,5 @@
 <h1>A Job Role</h1>
 <h2>Role Id: {{oneRoleId}}</h2>
+<p>role id: {{role.roleId}}</p>
+<p>role name: {{role.roleName}}</p>
+<p>role object: {{role}}</p>
