role data accessed for each role

--- a/jobMarket/src/app/role/role.component.html
+++ b/jobMarket/src/app/role/role.component.html
@@ -2,4 +2,4 @@
 <h2>Role Id: {{oneRoleId}}</h2>
 <p>role id: {{role.roleId}}</p>
 <p>role name: {{role.roleName}}</p>
-<p>role object: {{role}}</p>
+<p>category: {{role.category}}</p>
