--- a/jobMarket/src/app/role-dashboard/role-dashboard.component.html
+++ b/jobMarket/src/app/role-dashboard/role-dashboard.component.html
@@ -13,7 +13,10 @@
     <tr *ngFor="let role of allRoles; let i = index">
         <td><button [routerLink]="['/role',role.roleID]">{{role.roleName}}</button></td>
         <td>{{role.category}}</td>
-        <!-- this doesnt work: -->
-        <!-- <td *ngFor="let vacancy of allVacancies; let j = index" *ngIf="role.roleName == vacancy.role.roleName">{{}}</td> -->
+        <td></td>
+        <td></td>
+        <td>{{role.medSalaryNow}}</td>
+        <td></td>
+        <td>{{role.vacCount}}</td>
     </tr>
 </table>
