--- a/jobMarket/src/app/role/role.component.html
+++ b/jobMarket/src/app/role/role.component.html
@@ -1,8 +1,7 @@
 <h1>A Job Role</h1>
 <h2>Role Id: {{oneRoleId}}</h2>
-<p>role id: {{role.roleId}}</p>
-<p>role name: {{role.roleName}}</p>
-<p>role object: {{role}}</p>
-<p>category: {{role.category}}</p>
+<p>Role Id: {{role.roleId}}</p>
+<p>Role name: {{role.roleName}}</p>
+<p>Category: {{role.category}}</p>
 <app-chart> </app-chart>
 
