--- a/jobMarket/src/app/app.component.html
+++ b/jobMarket/src/app/app.component.html
@@ -1,7 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <nav style="text-align: center">
   <p><a routerLink="/role-dashboard">Role Dashboard</a> |
-  <a routerLink="/vacancy-dashboard">Vacancy Dashboard</a></p>
+  <a routerLink="/vacancy-dashboard">Vacancy Dashboard</a>
+  <a routerLink="/role-admin"> Role Admin </a>
+</p>
 </nav>
 
 <div style="text-align:center">
