--- a/jobMarket/src/app/role/role.component.html
+++ b/jobMarket/src/app/role/role.component.html
@@ -15,13 +15,14 @@
             <td>{{vac.uploadYear}}</td> 
         </tr>
     </ng-container>
-    <tr><th>Historical Vacancies</th></tr>
+</table>
+    <!-- <tr><th>Historical Vacancies</th></tr>
     <tr *ngFor = "let vac of role.vacancies">
         <td><a href="{{vac.link}}">{{vac.title}}</a></td>
         <td>{{vac.salary}}</td>
         <td>{{vac.uploadYear}}</td>
-    </tr>
-</table>
+    </tr> -->
+
 
 <p>total ever vacancies: {{vacCount}}</p>
 <p>total current vacancies: {{role.numVacanciesNow}}</p>
@@ -32,3 +33,23 @@
 
 <p>median current salary: £{{role.medSalaryNow}}</p>
 <p>median last year salary: £{{role.medSalaryPrev}}</p>
+
+<div> 
+    <div style="display: block"> 
+        <canvas baseChart 
+            [datasets]="lineChartData" 
+            [labels]="lineChartLabels" 
+            [options]="lineChartOptions" 
+            [legend]="lineChartLegend"
+            [chartType]="lineChartType"> 
+        </canvas>
+    </div>
+</div>
+
+<div style="display: block"> 
+    <canvas baseChart
+        [data]="pieChartData"
+        [labels]="pieChartLabels"
+        [chartType]="pieChartType"> 
+    </canvas>
+</div>
