filter search role dash

--- a/jobMarket/src/app/role/role.component.html
+++ b/jobMarket/src/app/role/role.component.html
@@ -1,4 +1,4 @@
-<h1 style = "text-align: center">{{role.roleName}} (id: {{role.roleId}})</h1>
+<h1 style = "text-align: center">{{role.roleName}}</h1>
 <h2 style = "text-align: center">{{role.category}}</h2>
 <table>
     <h3>{{role.roleName}} Vacancies:</h3>
