--- a/jobMarket/src/app/role-dashboard/role-dashboard.component.html
+++ b/jobMarket/src/app/role-dashboard/role-dashboard.component.html
@@ -1,4 +1,6 @@
 <h2>Role Dashboard</h2>
+<input type="text" placeholder="Search" [(ngModel)]="searchText" autocomplete="off">
+&nbsp;
 <table id="roleTable">
     <tr>
         <th>Job Role</th>
@@ -10,7 +12,7 @@
         <th>Historical Permanent Ads</th>
         <th>Live Job Vacancies</th>
     </tr>
-    <tr *ngFor="let role of allRoles; let i = index">
+    <tr *ngFor="let role of allRoles | filter:searchText">
         <td><button [routerLink]="['/role',role.roleId]">{{role.roleName}}</button></td>
         <td>{{role.category}}</td>
         <td></td>
