ranked roles in the role dash

--- a/jobMarket/src/app/role-dashboard/role-dashboard.component.css
+++ b/jobMarket/src/app/role-dashboard/role-dashboard.component.css
@@ -1,5 +1,9 @@
-#roleTable{
+table{
     color: grey;
     padding: 10px;
-    border-spacing: 20px
+    border-spacing: 20px;
+    border: 2px;
+    
+
 }
+
