Added bootstrap too nav bar

--- a/jobMarket/src/app/app.component.html
+++ b/jobMarket/src/app/app.component.html
@@ -1,10 +1,16 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<nav style="text-align: center">
-  <p><a routerLink="/role-dashboard">Role Dashboard</a> |
-  <a routerLink="/vacancy-dashboard"> Vacancy Dashboard</a> |
-  <a routerLink="/role-admin"> Role Admin </a>
-</p>
-</nav>
+<div > 
+  <ul class="nav nav-tabs"> 
+    <li class="nav-item"> 
+      <a class="nav-link" routerLink="/role-dashboard">Role Dashboard</a> 
+    </li>
+    <li class="nav-item"> 
+    <a class="nav-link" routerLink="/vacancy-dashboard"> Vacancy Dashboard</a> 
+    </li>
+    <li class="nav-item">
+    <a class="nav-link" routerLink="/role-admin"> Role Admin </a>
+  </li>
+  </ul>
+</div>
 
 <div style="text-align:center">
   <h1>
