--- a/jobMarket/src/app/role-dashboard/role-dashboard.component.html
+++ b/jobMarket/src/app/role-dashboard/role-dashboard.component.html
@@ -3,17 +3,17 @@
 &nbsp;
 <table id="roleTable">
     <tr>
-        <th>Job Role</th>
-        <th>Role Category</th>
-        <th>Rank This Year</th>
-        <th>Rank Change</th>
-        <th>Median Salary This Year</th>
-        <th>Median Salary Change</th>
-        <th>Historical Permanent Ads</th>
+        <th>Job Role </th>
+        <th>Role Category </th>
+        <th>Rank This Year |</th>
+        <th>Rank Change |</th>
+        <th>Median Salary This Year |</th>
+        <th>Median Salary Change |</th>
+        <th>Historical Permanent Ads |</th>
         <th>Live Job Vacancies</th>
     </tr>
     <tr *ngFor="let role of allRoles | filter:searchText">
-        <td><button [routerLink]="['/role',role.roleId]">{{role.roleName}}</button></td>
+        <td><a [routerLink]="['/role',role.roleId]">{{role.roleName}}</a></td>
         <td>{{role.category}}</td>
         <td></td>
         <td></td>
