--- a/jobMarket/src/app/vacancy/vacancy.component.html
+++ b/jobMarket/src/app/vacancy/vacancy.component.html
@@ -66,7 +66,9 @@
         <td *ngIf="!isEditable">{{v.uploadYear}}</td>
         <td *ngIf="isEditable"><input [(ngModel)]="uploadYear"></td>
     </tr>
+    <tr> &nbsp; </tr>
 </table>
+
 <!-- <table>
     <table>
         <tr>
