Installed angular material and added responsive nav bar

--- a/jobMarket/src/app/app.component.html
+++ b/jobMarket/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div > 
+<!-- <div > 
   <ul class="nav nav-tabs"> 
     <li class="nav-item"> 
       <a class="nav-link" routerLink="/role-dashboard">Role Dashboard</a> 
@@ -10,8 +10,10 @@
     <a class="nav-link" routerLink="/role-admin"> Role Admin </a>
   </li>
   </ul>
-</div>
+</div> -->
 
+
+<app-nav-bar> 
 <div style="text-align:center">
   <h1>
     {{ title }}
@@ -25,3 +27,4 @@
   <router-outlet></router-outlet>
 </div>
 
+</app-nav-bar>
