--- a/jobMarket/src/app/role-dashboard/role-dashboard.component.html
+++ b/jobMarket/src/app/role-dashboard/role-dashboard.component.html
@@ -6,7 +6,7 @@
         <th>Job Role</th>
         <th>Role Category</th>
         <th>Rank This Year</th>
-        <th>Rank Last Year</th>
+        <!-- <th>Rank Last Year</th> -->
         <th>Rank Change</th>
         <th>Mean Salary This Year</th>
         <th>Mean Salary Change</th>
@@ -17,7 +17,7 @@
         <td><a [routerLink]="['/role',role.roleId]">{{role.roleName}}</a></td>
         <td>{{role.category}}</td>
         <td>{{role.rankNow}}</td>
-        <td>{{role.rankPrev}}</td>
+        <!-- <td>{{role.rankPrev}}</td> -->
         <td>{{role.rankChange}}    {{role.rankChange==0? ">" : role.rankChange>0? "^" : "v"}}</td>
         <td>£{{role.medSalaryNow}}</td>
         <td>{{role.medChange}}%</td>
