--- a/jobMarket/src/app/vacancy/vacancy.component.html
+++ b/jobMarket/src/app/vacancy/vacancy.component.html
@@ -1,6 +1,6 @@
 <h2>Job Vacancies</h2>
 
-<table *ngFor="let v of allVacancies">
+<table *ngFor="let v of allVacancies"> 
     <tr>
         <td>Vacancy ID: </td>
         <td>{{v.vacancyId}}</td>
@@ -19,52 +19,52 @@
         </div>
         </td> -->
         <td><button (click)="toggleEdits()">{{(isEditable)?"Save":"Edit"}}</button></td>
-        <td><button (click)="deleteVacancy()">Delete Vacancy</button></td>
+        <td><button (click)="deleteVacancy(v.vacancyId)">Delete Vacancy</button></td>
     </tr>
     <tr>
         <td>Company:</td>
         <td *ngIf="!isEditable">{{v.company}}</td>
-        <td *ngIf="isEditable"><input [(ngModel)]="company"></td>
+        <td *ngIf="isEditable"><input [(ngModel)]="v.company"></td>
     </tr>
     <tr>
         <td>Description:</td>
         <td *ngIf="!isEditable">{{v.description}}</td>
-        <td *ngIf="isEditable"><input [(ngModel)]="description"></td>  
+        <td *ngIf="isEditable"><input [(ngModel)]="v.description"></td>  
     </tr>
     <tr>
         <td>Job Type:</td>
         <td *ngIf="!isEditable">{{v.job_type}}</td>
-        <td *ngIf="isEditable"><input [(ngModel)]="job_type"></td>
+        <td *ngIf="isEditable"><input [(ngModel)]="v.job_type"></td>
     </tr>
     <tr>
         <td>link:</td>
         <td *ngIf="!isEditable">{{v.link}}</td>
-        <td *ngIf="isEditable"><input [(ngModel)]="link"></td>  
+        <td *ngIf="isEditable"><input [(ngModel)]="v.link"></td>  
     </tr>
     <tr>
         <td>location:</td>
         <td *ngIf="!isEditable">{{v.location}}</td>
-        <td *ngIf="isEditable"><input [(ngModel)]="location"></td>
+        <td *ngIf="isEditable"><input [(ngModel)]="v.location"></td>
     </tr>
     <tr>
         <td>post time:</td>
         <td *ngIf="!isEditable">{{v.postTime}}</td>
-        <td *ngIf="isEditable"><input [(ngModel)]="postTime"></td>  
+        <td *ngIf="isEditable"><input [(ngModel)]="v.postTime"></td>  
     </tr>
     <tr>
         <td>Salary:</td>
         <td *ngIf="!isEditable">{{v.salary}}</td>
-        <td *ngIf="isEditable"><input [(ngModel)]="salary"></td>  
+        <td *ngIf="isEditable"><input [(ngModel)]="v.salary"></td>  
     </tr>
     <tr>
         <td>Title:</td>
         <td *ngIf="!isEditable">{{v.title}}</td>
-        <td *ngIf="isEditable"><input [(ngModel)]="title"></td>  
+        <td *ngIf="isEditable"><input [(ngModel)]="v.title"></td>  
     </tr>
     <tr>
         <td>Upload Year:</td>
         <td *ngIf="!isEditable">{{v.uploadYear}}</td>
-        <td *ngIf="isEditable"><input [(ngModel)]="uploadYear"></td>
+        <td *ngIf="isEditable"><input [(ngModel)]="v.uploadYear"></td>
     </tr>
 </table>
 <!-- <table>
