--- a/jobMarket/src/app/role-dashboard-data-table/role-dashboard-data-table.component.html
+++ b/jobMarket/src/app/role-dashboard-data-table/role-dashboard-data-table.component.html
@@ -13,8 +13,38 @@
     <ng-container matColumnDef="category">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
         <td mat-cell *matCellDef="let row">{{row.category}}</td>
-      </ng-container>
+    </ng-container>
+    
+    <!-- Historical Ads Column -->
+    <ng-container matColumnDef="vacCount">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Historical Perminant Ads</th>
+        <td mat-cell *matCellDef="let row">{{row.vacCount}}</td>
+    </ng-container>
+    
+  <!-- Mean Salary This Year  -->
+    <ng-container matColumnDef="sumSalaryNow">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Mean Salary This Year</th>
+        <td mat-cell *matCellDef="let row">£{{row.sumSalaryNow}}</td>
+    </ng-container>
 
+     <!-- Mean Salary This Year  -->
+     <ng-container matColumnDef="numVacanciesNow">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Live Job Vacancies</th>
+        <td mat-cell *matCellDef="let row">{{row.numVacanciesNow}}</td>
+    </ng-container>
+
+    <!-- Mean Salary This Year  -->
+    <ng-container matColumnDef="medChange">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Mean Salary Change</th>
+        <td mat-cell *matCellDef="let row">{{row.medChange}}%</td>
+    </ng-container>
+
+     <!-- Mean Salary This Year  -->
+     <ng-container matColumnDef="rankNow">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Rank This Year</th>
+        <td mat-cell *matCellDef="let row">{{row.rankNow}}</td>
+    </ng-container>
+    
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
@@ -23,6 +53,6 @@
       [length]="dataSource?.data.length"
       [pageIndex]="0"
       [pageSize]="50"
-      [pageSizeOptions]="[5, 50, 100, 250]">
+      [pageSizeOptions]="[10, 25, 50]">
   </mat-paginator>
 </div>
