--- a/jobMarket/src/app/role/role.component.html
+++ b/jobMarket/src/app/role/role.component.html
@@ -43,10 +43,12 @@
     </div>
 </div>
 
-<div style="display: block"> 
-    <canvas baseChart
-        [data]="pieChartData"
-        [labels]="pieChartLabels"
-        [chartType]="pieChartType"> 
-    </canvas>
+<div> 
+    <div style="display: block"> 
+        <canvas baseChart
+            [data]="pieChartData"
+            [labels]="pieChartLabels"
+            [chartType]="pieChartType"> 
+        </canvas>
+    </div>
 </div>
