added material with add job pop up

--- a/jobMarket/src/app/vacancy/vacancy.component.html
+++ b/jobMarket/src/app/vacancy/vacancy.component.html
@@ -1,11 +1,10 @@
+<h2 style="text-align: center">Job Vacancies</h2> 
 
-<body>
-<h2 style="text-align: center">Job Vacancies</h2>
 
-<app-new-listing></app-new-listing>
 
+<hr> 
 <!-- above may cause issues with below -->
-<table *ngFor="let v of allVacancies">
+<!-- <table *ngFor="let v of allVacancies">
     <tr>
         <td>Vacancy ID: </td>
         <td>{{v.vacancyId}}</td>
@@ -62,8 +61,7 @@
         <td>{{skill.skill}}</td>
     </tr>
     <tr>&nbsp;</tr>
-</table>
-
+</table> -->
 
 
 <!-- <table>
@@ -85,4 +83,3 @@
     </table>
 </table> -->
 
-</body>
