--- a/jobMarket/src/app/new-listing/new-listing.component.html
+++ b/jobMarket/src/app/new-listing/new-listing.component.html
@@ -1,34 +1,68 @@
-<h3>Add Vacancy</h3>
+<h3> Add Vacancy </h3>
 <!-- <form (ngSubmit)="submit()"> -->
-    <table>
+<br> 
+    <form class="example-form">
 
         <tr>
-            <td>Vacancy:</td>&nbsp;&nbsp;&nbsp;
-            <td>Company:</td>&nbsp;&nbsp;&nbsp;
-            <td>Description:</td>&nbsp;&nbsp;&nbsp;
-            <td>Job Type:</td>&nbsp;&nbsp;&nbsp;
-            <td>Location:</td>&nbsp;&nbsp;&nbsp;
-            <td>Salary:</td>
-            <td>Site URL:</td>
-            <td>Role:</td>
+            <mat-form-field class="example-full-width">
+            <input [(ngModel)]="newTitle" matInput placeholder="Job Title" #inputName="ngModel" name="newTitle" [ngModelOptions]="{standalone: true}">
+            </mat-form-field>
+        </tr> 
+        
+        <tr> 
+            
+            <mat-form-field class="example-full-width">
+            <input matInput [(ngModel)]="newCompany" name="newCompany" [ngModelOptions]="{standalone: true}" placeholder="Company">
+            </mat-form-field>
         </tr>
-        <tr>
-            <td><input [(ngModel)]="newTitle" #inputName="ngModel" name="newTitle" [ngModelOptions]="{standalone: true}"></td>&nbsp;&nbsp;&nbsp;
-            <td><input [(ngModel)]="newCompany" name="newCompany" [ngModelOptions]="{standalone: true}"></td>&nbsp;&nbsp;&nbsp;
-            <td><input [(ngModel)]="newDescription" name="newDescription" [ngModelOptions]="{standalone: true}"></td>&nbsp;&nbsp;&nbsp;
-            <td>Permanent: <input type="radio" value="true" name="newJobType" [(ngModel)]="jobType" [ngModelOptions]="{standalone: true}"><br>Contract: <input type="radio" value="false" name="newJobType" [(ngModel)]="jobType"></td>&nbsp;&nbsp;&nbsp;
+        
+        <tr> 
+            <mat-form-field class="example-full-width">
+            <input matInput [(ngModel)]="newDescription" name="newDescription" [ngModelOptions]="{standalone: true}" placeholder="Description">
+            </mat-form-field>
+        </tr>
+        
+
+        <tr> 
+            <td>Job Type:</td>
+            <td>Permanent: <input type="radio" value="true" name="newJobType" [(ngModel)]="jobType" [ngModelOptions]="{standalone: true}"> </td>Contract: <input type="radio" value="false" name="newJobType" [(ngModel)]="jobType">&nbsp;
+        </tr> 
+
+        <br>
+        <tr> 
+            <td>Location:</td>
             <td><input [(ngModel)]="newLocation" name="newLocation" [ngModelOptions]="{standalone: true}"></td>&nbsp;&nbsp;&nbsp;
+        </tr>
+        <br>
+        <tr> 
+            <td>Salary:</td>
             <td><input [(ngModel)]="newSalary" name="newSalary" [ngModelOptions]="{standalone: true}"></td>
+        </tr>
+        <br>
+        <tr> 
+            <td>Site URL:</td>
             <td><input [(ngModel)]="newLink" name="newLink" [ngModelOptions]="{standalone: true}"></td>
+        </tr>
+        <br>
+        <tr> 
+            <td>Role:</td>
             <td><select id="role-select" [(ngModel)]="selectedRoleId">
                     <option *ngFor="let role of roles" (change)="updateRole(selectedRole.value)" #selectDept value="{{role.roleId}}">
                         {{role.roleId}}:{{role.roleName}}
                     </option>
                 </select>
             </td>
-        </tr>
-    </table>
+        </tr> 
+        
+            
+            
+            
+           
+            
+
+    </form>
     <table>
+    <hr> 
         <tr><td>Required Skills:</td></tr>
         <tr *ngFor="let s of skills; let i = index">
             <ng-container *ngIf="i%6==0">
