--- a/jobMarket/src/app/vacancy/vacancy.component.html
+++ b/jobMarket/src/app/vacancy/vacancy.component.html
@@ -1,5 +1,3 @@
-
-<body>
 <h2 style="text-align: center">Job Vacancies</h2>
 
 <app-new-listing></app-new-listing>
@@ -23,7 +21,7 @@
     </tr>
     <tr>
         <td>Job Type:</td>
-        <td *ngIf="!isEditable">{{v.job_type}}</td>
+        <td *ngIf="!isEditable">{{v.jobType}}</td>
         <td *ngIf="isEditable"><input [(ngModel)]="job_type"></td>
     </tr>
     <tr>
@@ -83,5 +81,3 @@
         </tr>
     </table>
 </table> -->
-
-</body>
