--- a/jobMarket/src/app/nav-bar/nav-bar.component.html
+++ b/jobMarket/src/app/nav-bar/nav-bar.component.html
@@ -20,7 +20,9 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>IT Job Market</span>
+      <span>
+        <img width="60" alt="Angular Logo" routerLink="/role-dashboard" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/02/Circle-icons-computer.svg/1024px-Circle-icons-computer.svg.png">
+        <a routerLink="/role-dashboard">IT Job Market</a></span>
       <span class="spacer"></span> 
       <a routerLink="/role-dashboard">Role Dashboard </a>
       <a routerLink="/vacancy-dashboard">Vacancy Dashboard </a>
