--- a/jobMarket/src/app/new-listing/new-listing.component.html
+++ b/jobMarket/src/app/new-listing/new-listing.component.html
@@ -1,7 +1,7 @@
+<div> 
 <h3> Add Vacancy </h3>
 <!-- <form (ngSubmit)="submit()"> -->
-<br> 
-    <form class="example-form">
+    <!-- <form class="example-form"> -->
 
         <tr>
             <mat-form-field class="example-full-width">
@@ -23,37 +23,29 @@
         </tr>
         
 
-        <tr> 
+        <!-- <tr> 
             <td>Job Type:</td>
-            <td>Permanent: <input type="radio" value="true" (click)="setJobType(true)" name="newJobType" ><br>
+            <td>Permanent: <input type="radio" value="true" (click)="setJobType(true)" name="newJobType" >  
                 Contract: <input type="radio" value="false" (click)="setJobType(false)" name="newJobType" ></td>&nbsp;&nbsp;&nbsp;
-        </tr> 
-
-        <br>
+        </tr>  -->
         <tr> 
-            <td>Location:</td>
-        <tr>
-            <!-- <td><input [(ngModel)]="newTitle" #inputName="ngModel" name="newTitle" [ngModelOptions]="{standalone: true}"></td>&nbsp;&nbsp;&nbsp;
-            <td><input [(ngModel)]="newCompany" name="newCompany" [ngModelOptions]="{standalone: true}"></td>&nbsp;&nbsp;&nbsp;
-            <td><input [(ngModel)]="newDescription" name="newDescription" [ngModelOptions]="{standalone: true}"></td>&nbsp;&nbsp;&nbsp;
-            
-            <td>Permanent: <input type="radio" value="true" (click)="setJobType(true)" name="newJobType" ><br>
-                Contract: <input type="radio" value="false" (click)="setJobType(false)" name="newJobType" ></td>&nbsp;&nbsp;&nbsp; -->
-
-            <td><input [(ngModel)]="newLocation" name="newLocation" [ngModelOptions]="{standalone: true}"></td>&nbsp;&nbsp;&nbsp;
+            <mat-form-field class="example-full-width">
+            <td><input matInput [(ngModel)]="newLocation" name="newLocation" [ngModelOptions]="{standalone: true}" placeholder="Location"></td>
+            </mat-form-field>
         </tr>
-        <br>
         <tr> 
-            <td>Salary:</td>
-            <td><input [(ngModel)]="newSalary" name="newSalary" [ngModelOptions]="{standalone: true}"></td>
+            <mat-form-field class="example-full-width">
+            <td><input matInput [(ngModel)]="newSalary" name="newSalary" [ngModelOptions]="{standalone: true}" placeholder="Salary"></td>
+            </mat-form-field>
         </tr>
-        <br>
+        
         <tr> 
-            <td>Site URL:</td>
-            <td><input [(ngModel)]="newLink" name="newLink" [ngModelOptions]="{standalone: true}"></td>
+            <mat-form-field class="example-full-width">
+            <td><input matInput [(ngModel)]="newLink" name="newLink" [ngModelOptions]="{standalone: true}" placeholder="Site URL"></td>
+            </mat-form-field>
         </tr>
-        <br>
-        <tr> 
+        
+        <!-- <tr> 
             <td>Role:</td>
             <td><select id="role-select" [(ngModel)]="selectedRoleId">
                     <option *ngFor="let role of roles" (change)="updateRole(selectedRole.value)" #selectDept value="{{role.roleId}}">
@@ -61,33 +53,36 @@
                     </option>
                 </select>
             </td>
-        </tr> 
-        
-            
-            
-            
-           
-            
+        </tr>  -->
 
-    </form>
+        <mat-form-field>
+                <mat-label>Role</mat-label>
+                <mat-select>
+                  <mat-option *ngFor="let role of roles" (change)="updateRole(selectedRole.value)" #selectDept value="{{role.roleId}}">
+                    {{role.roleName}}
+                  </mat-option>
+                </mat-select>
+        </mat-form-field>
+    <!-- </form> -->
+</div>
     <table>
     <hr> 
         <tr><td>Required Skills:</td></tr>
         <tr *ngFor="let s of skills; let i = index">
             <ng-container *ngIf="i%6==0">
-                <td><button value="s.skillId" (click)="addToSkills(skills[i])" onClick="this.disabled=true">{{skills[i].skill}}</button>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <td><button mat-raised-button value="s.skillId" (click)="addToSkills(skills[i])" onClick="this.disabled=true">{{skills[i].skill}}</button>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <span *ngIf="skills.length>i+1">
-                        <button value="s.skillId" (click)="addToSkills(skills[i+1])" onClick="this.disabled=true"> {{skills[i+1].skill}}</button>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <button mat-raised-button value="s.skillId" (click)="addToSkills(skills[i+1])" onClick="this.disabled=true"> {{skills[i+1].skill}}</button>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <span *ngIf="skills.length>i+2">
-                        <button value="s.skillId" (click)="addToSkills(skills[i+2])" onClick="this.disabled=true"> {{skills[i+2].skill}}</button>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <button mat-raised-button value="s.skillId" (click)="addToSkills(skills[i+2])" onClick="this.disabled=true"> {{skills[i+2].skill}}</button>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <span *ngIf="skills.length>i+3">    
-                        <button value="s.skillId" (click)="addToSkills(skills[i+3])" onClick="this.disabled=true"> {{skills[i+3].skill}}</button>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <button mat-raised-button value="s.skillId" (click)="addToSkills(skills[i+3])" onClick="this.disabled=true"> {{skills[i+3].skill}}</button>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <span *ngIf="skills.length>i+4">        
-                        <button value="s.skillId" (click)="addToSkills(skills[i+4])" onClick="this.disabled=true"> {{skills[i+4].skill}}</button>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <button mat-raised-button value="s.skillId" (click)="addToSkills(skills[i+4])" onClick="this.disabled=true"> {{skills[i+4].skill}}</button>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <span *ngIf="skills.length>i+5">            
-                        <button value="s.skillId" (click)="addToSkills(skills[i+5])" onClick="this.disabled=true"> {{skills[i+5].skill}}</button>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <button mat-raised-button value="s.skillId" (click)="addToSkills(skills[i+5])" onClick="this.disabled=true"> {{skills[i+5].skill}}</button>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <span *ngIf="skills.length>i+6">
-                        <button value="s.skillId" (click)="addToSkills(skills[i+6])" onClick="this.disabled=true"> {{skills[i+6].skill}}</button>
+                        <button mat-raised-button value="s.skillId" (click)="addToSkills(skills[i+6])" onClick="this.disabled=true"> {{skills[i+6].skill}}</button>
                     </span>
                     </span>
                     </span>
@@ -97,5 +92,6 @@
                 </td>
             </ng-container>
         </tr>
-        <tr><td><button (click)="createNewVacancy()">Add Vacancy</button></td></tr>
+        <hr> 
+        <tr><td><button mat-raised-button color="accent" (click)="createNewVacancy()">Add Vacancy</button></td></tr>
     </table>
