--- a/jobMarket/src/app/vacancy/vacancy.component.html
+++ b/jobMarket/src/app/vacancy/vacancy.component.html
@@ -1,5 +1,6 @@
 <h2 style="text-align: center">Job Vacancies</h2>
 
+<app-vacancy-dashboard></app-vacancy-dashboard>
 
 <table *ngFor="let v of allVacancies">
     <tr>
