--- a/jobMarket/src/app/role-dashboard-data-table/role-dashboard-data-table.component.html
+++ b/jobMarket/src/app/role-dashboard-data-table/role-dashboard-data-table.component.html
@@ -6,7 +6,7 @@
         
       <tr *ngFor="let role of allRoles"> 
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Job Role</th>
-        <td mat-cell *matCellDef="let row"> <a [routerLink]="['/role',role.roleId]">{{row.roleName}}</a></td>
+        <td mat-cell *matCellDef="let row"> <a mat-tab-link [routerLink]="['/role',row.roleId]">{{row.roleName}}</a></td>
       </tr>
     </ng-container>
 
@@ -46,6 +46,22 @@
         <td mat-cell *matCellDef="let row">{{row.rankNow}}</td>
     </ng-container>
     
+    <ng-container matColumnDef="rankChange">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Rank Change</th>
+        <td mat-cell *matCellDef="let row">
+          <ng-container *ngIf="row.rankChange<0">
+            <mat-icon>trending_down</mat-icon>
+          </ng-container>
+          <ng-container *ngIf="row.rankChange>0">
+            <mat-icon>trending_up</mat-icon>
+          </ng-container>
+          <ng-container *ngIf="row.rankChange==0">
+            <mat-icon>trending_flat</mat-icon>
+          </ng-container>
+          {{row.rankChange}}
+        </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
