--- a/jobMarket/src/app/role-dashboard-data-table/role-dashboard-data-table.component.html
+++ b/jobMarket/src/app/role-dashboard-data-table/role-dashboard-data-table.component.html
@@ -50,15 +50,15 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Rank Change</th>
         <td mat-cell *matCellDef="let row">
           <ng-container *ngIf="row.rankChange<0">
-            <mat-icon>trending_down</mat-icon>
+              {{row.rankChange}}  <mat-icon>trending_down</mat-icon>
           </ng-container>
           <ng-container *ngIf="row.rankChange>0">
-            <mat-icon>trending_up</mat-icon>
+              +{{row.rankChange}}  <mat-icon>trending_up</mat-icon>
           </ng-container>
           <ng-container *ngIf="row.rankChange==0">
-            <mat-icon>trending_flat</mat-icon>
+              {{row.rankChange}}  <mat-icon>trending_flat</mat-icon>
           </ng-container>
-          {{row.rankChange}}
+          
         </td>
     </ng-container>
 
