--- a/jobMarket/src/app/new-listing/new-listing.component.html
+++ b/jobMarket/src/app/new-listing/new-listing.component.html
@@ -6,64 +6,60 @@
         <tr>
             <mat-form-field class="example-full-width">
             <input [(ngModel)]="newTitle" matInput placeholder="Job Title" #inputName="ngModel" name="newTitle" [ngModelOptions]="{standalone: true}">
-            </mat-form-field>
-        </tr> 
-        
-        <tr> 
+            </mat-form-field>&nbsp;&nbsp;
             
             <mat-form-field class="example-full-width">
-            <input matInput [(ngModel)]="newCompany" name="newCompany" [ngModelOptions]="{standalone: true}" placeholder="Company">
-            </mat-form-field>
-        </tr>
-        
-        <tr> 
+                <input matInput [(ngModel)]="newCompany" name="newCompany" [ngModelOptions]="{standalone: true}" placeholder="Company">
+                </mat-form-field>&nbsp;&nbsp;
+
             <mat-form-field class="example-full-width">
-            <input matInput [(ngModel)]="newDescription" name="newDescription" [ngModelOptions]="{standalone: true}" placeholder="Description">
-            </mat-form-field>
-        </tr>
+                <input matInput [(ngModel)]="newDescription" name="newDescription" [ngModelOptions]="{standalone: true}" placeholder="Description">
+            </mat-form-field>&nbsp;&nbsp;
+
+            
+            <mat-form-field>
+                <mat-label>Role</mat-label>
+                <mat-select id="role-select" [(ngModel)]="selectedRoleId">
+                  <mat-option *ngFor="let role of roles" value="{{role.roleId}}" (change)="updateRole(selectedRole.value)">
+                    {{role.roleName}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+
+            <td> 
+               
+            </td>
+        </tr> 
         
 
-        <!-- <tr> 
-            <td>Job Type:</td>
-            <td>Permanent: <input type="radio" value="true" (click)="setJobType(true)" name="newJobType" >  
-                Contract: <input type="radio" value="false" (click)="setJobType(false)" name="newJobType" ></td>&nbsp;&nbsp;&nbsp;
-        </tr>  -->
         <tr> 
             <mat-form-field class="example-full-width">
             <td><input matInput [(ngModel)]="newLocation" name="newLocation" [ngModelOptions]="{standalone: true}" placeholder="Location"></td>
-            </mat-form-field>
-        </tr>
-        <tr> 
+            </mat-form-field>&nbsp;&nbsp;
+         
             <mat-form-field class="example-full-width">
             <td><input matInput [(ngModel)]="newSalary" name="newSalary" [ngModelOptions]="{standalone: true}" placeholder="Salary"></td>
-            </mat-form-field>
-        </tr>
+            </mat-form-field>&nbsp;&nbsp;
         
-        <tr> 
             <mat-form-field class="example-full-width">
             <td><input matInput [(ngModel)]="newLink" name="newLink" [ngModelOptions]="{standalone: true}" placeholder="Site URL"></td>
-            </mat-form-field>
-        </tr>
+            </mat-form-field>&nbsp;&nbsp;
         
-        <!-- <tr> 
-            <td>Role:</td>
+            <!-- <td>Role:</td>
             <td><select id="role-select" [(ngModel)]="selectedRoleId">
                     <option *ngFor="let role of roles" (change)="updateRole(selectedRole.value)" #selectDept value="{{role.roleId}}">
                         {{role.roleId}}:{{role.roleName}}
                     </option>
                 </select>
-            </td>
-        </tr>  -->
+            </td> -->
 
-        <mat-form-field>
-                <mat-label>Role</mat-label>
-                <mat-select>
-                  <mat-option *ngFor="let role of roles" (change)="updateRole(selectedRole.value)" #selectDept value="{{role.roleId}}">
-                    {{role.roleName}}
-                  </mat-option>
-                </mat-select>
-        </mat-form-field>
-    <!-- </form> -->
+            <mat-radio-group aria-label="Job Type">
+                <mat-radio-button value="true" (click)="setJobType(true)" >Permanent</mat-radio-button>&nbsp;&nbsp;
+                <mat-radio-button value="false" (click)="setJobType(false)">Contract</mat-radio-button>
+              </mat-radio-group>
+        </tr> 
+
+        
 </div>
     <table>
     <hr> 
