--- a/jobMarket/src/app/role-dashboard-data-table/role-dashboard-data-table.component.html
+++ b/jobMarket/src/app/role-dashboard-data-table/role-dashboard-data-table.component.html
@@ -6,7 +6,7 @@
         
       <tr *ngFor="let role of allRoles"> 
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Job Role</th>
-        <td mat-cell *matCellDef="let row"> <a [routerLink]="['/role',role.roleId]">{{row.roleName}}</a></td>
+        <td mat-cell *matCellDef="let row"> <a [routerLink]="['/role',row.roleId]">{{row.roleName}}</a></td>
       </tr>
     </ng-container>
 
