--- a/jobMarket/src/app/register/register.component.html
+++ b/jobMarket/src/app/register/register.component.html
@@ -1,38 +1,27 @@
 <h1>Register Account</h1>
 
-<form (submit)="addUser(username,password,email)">
-    <table class="table">
-        <tr>
-            <td>
-                <input name="username" placeholder="username" #username> 
-            </td>
-        </tr>
-
-        <tr>
-            <td>
-                <input name="password" placeholder="password" #password>
-            </td>
-        </tr>
-
-        <tr>
-            <td>
-                <input name="email" placeholder="email" #email>
-            </td>
-        </tr>
-
-        <tr>
-            <td>
-                <input type="submit" value= "Add">
-            </td>
-        </tr>
-
-        <tr>
-            <td>
-                <div [hidden]="invalidFormMessage">
-                    {{invalidFormMessage}}
-                </div>
-            </td>
-        </tr>
-    </table>
+<form (submit)="">
+        <table>
+                <tr>
+                    <th>Username:</th>
+                    <td><input [(ngModel)]="username"></td>  
+                </tr> 
+                <tr>
+                    <th>Password:</th>
+                    <td><input [(ngModel)]="password"></td>
+                </tr>
+                <tr>
+                    <td>Confirm Password:</td>
+                    <td><input [(ngModel)]="password"></td>
+                </tr>
+                <tr>
+                    <td>Email:</td>
+                    <td><input [(ngModel)]="email"></td>  
+                </tr>
+                <tr>
+                    <td>Job Type:</td>
+                    <td><input [(ngModel)]="jobType"></td>
+                </tr>
+            </table>
 
 </form>
