--- a/jobMarket/src/app/register/register.component.html
+++ b/jobMarket/src/app/register/register.component.html
@@ -1,6 +1,6 @@
 <h1>Register Account</h1>
 
-<form (submit)="">
+<form>
         <table>
                 <tr>
                     <th>Username:</th>
