added search bar to role data table

--- a/jobMarket/src/app/role-dashboard-data-table/role-dashboard-data-table.component.css
+++ b/jobMarket/src/app/role-dashboard-data-table/role-dashboard-data-table.component.css
@@ -1,3 +1,15 @@
 .full-width-table {
   width: 100%;
 }
+
+.mat-form-field {
+  padding-left: 20px;
+  font-size: 14px;
+  width: 100%;
+  padding-right: 20px;
+}
+
+.data-table {
+  margin: 20px auto; 
+}
+
