--- a/jobMarket/src/app/role-dashboard-data-table/role-dashboard-data-table.component.html
+++ b/jobMarket/src/app/role-dashboard-data-table/role-dashboard-data-table.component.html
@@ -1,6 +1,10 @@
-<div class="mat-elevation-z8">
+<mat-form-field>
+  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+</mat-form-field>
+
+<div class="mat-elevation-z8 data-table">
   <table mat-table class="full-width-table" matSort aria-label="Elements" [dataSource]="dataSource">
-      
+
     <!-- Name Column -->
     <ng-container matColumnDef="name">
         
