--- a/jobMarket/src/app/vacancy-details/vacancy-details.component.html
+++ b/jobMarket/src/app/vacancy-details/vacancy-details.component.html
@@ -1,6 +1,7 @@
-<h1 style = "text-align: center"><a href="{{link}}">{{title}}</a></h1>
-<h3 style = "text-align: center">{{company}}</h3>
-<h4 style = "text-align: center">{{location}} | £{{salary}}/annum</h4>
-<table><td *ngFor="let skill of vacancySkills"><tr>{{skill.skill}}</tr></td></table>
-<p style = "text-align: center">{{description}}</p>
+<h1>{{title}}</h1>
+<h3>{{company}}</h3>
+<h4>{{location}} | £{{salary}}/annum</h4>
+<h5><a href="{{link}}">Apply Here</a></h5>
+<table id="skillTable"><td *ngFor="let skill of vacancySkills"><tr>{{skill.skill}}</tr></td></table>
+<p>{{description}}</p>
 <p>{{uploadYear}} | {{postTime}}</p>
