--- a/jobMarket/src/app/new-listing/new-listing.component.html
+++ b/jobMarket/src/app/new-listing/new-listing.component.html
@@ -1,4 +1,4 @@
-<div> 
+<div id="vacancyInfo"> 
 <h3> Add Vacancy </h3>
 <!-- <form (ngSubmit)="submit()"> -->
     <!-- <form class="example-form"> -->
@@ -57,35 +57,13 @@
                 <mat-radio-button value="true" (click)="setJobType(true)" >Permanent</mat-radio-button>&nbsp;&nbsp;
                 <mat-radio-button value="false" (click)="setJobType(false)">Contract</mat-radio-button>
               </mat-radio-group>
-        </tr> 
-
-        
+        </tr>         
 </div>
-    <table>
-    <hr> 
-        <tr><td>Required/Preferred Skills:</td></tr>
-        <tr *ngFor="let s of skills; let i = index">
-            <ng-container *ngIf="i%6==0">
-                <td id="skillButtons">
-                    <button mat-raised-button value="s.skillId" (click)="addToSkills(skills[i])" onClick="this.disabled=true">{{skills[i].skill}}</button>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <span *ngIf="skills.length>i+1">
-                        <button mat-raised-button value="s.skillId" (click)="addToSkills(skills[i+1])" onClick="this.disabled=true"> {{skills[i+1].skill}}</button>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <span *ngIf="skills.length>i+2">
-                        <button mat-raised-button value="s.skillId" (click)="addToSkills(skills[i+2])" onClick="this.disabled=true"> {{skills[i+2].skill}}</button>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <span *ngIf="skills.length>i+3">    
-                        <button mat-raised-button value="s.skillId" (click)="addToSkills(skills[i+3])" onClick="this.disabled=true"> {{skills[i+3].skill}}</button>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <span *ngIf="skills.length>i+4">        
-                        <button mat-raised-button value="s.skillId" (click)="addToSkills(skills[i+4])" onClick="this.disabled=true"> {{skills[i+4].skill}}</button>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <span *ngIf="skills.length>i+5">            
-                        <button mat-raised-button value="s.skillId" (click)="addToSkills(skills[i+5])" onClick="this.disabled=true"> {{skills[i+5].skill}}</button>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    </span>
-                    </span>
-                    </span>
-                    </span>
-                    </span>
-                </td>
-            </ng-container><td></td>
-        </tr>
-        <hr> 
-        <tr><td><button mat-raised-button color="accent" (click)="createNewVacancy()">Add Vacancy</button></td></tr>
-    </table>
+
+<div id="skillTable">
+    <h3>Required/Preferred Skills:</h3>
+    <span *ngFor="let s of skills; let i = index">
+        <button mat-raised-button value="s.skillId" (click)="addToSkills(skills[i])" onClick="this.disabled=true">{{skills[i].skill}}</button>
+    </span>
+    <button mat-raised-button color="accent" (click)="createNewVacancy()">Add Vacancy</button>
+</div>
