--- a/jobMarket/src/app/new-listing/new-listing.component.css
+++ b/jobMarket/src/app/new-listing/new-listing.component.css
@@ -1,3 +1,15 @@
-.body{
-    padding: 5px
+#skillTable{
+    margin: auto;
+    width: 90%;
+    padding: 10px;
+}
+
+#skillTable button{
+    margin: 10px 10px 10px 10px;
+}
+
+#vacancyInfo{    
+    margin: auto;
+    width: 90%;
+    padding: 10px;
 }
