--- a/jobMarket/src/app/register/register.component.html
+++ b/jobMarket/src/app/register/register.component.html
@@ -1,7 +1,7 @@
 <h1>Register Account</h1>
-
+<app-welcome></app-welcome>
 <form>
-        <table>
+        <table id="registerTable">
                 <tr>
                     <th>Username:</th>
                     <td><input [(ngModel)]="username"></td>  
