--- a/jobMarket/src/app/user/user.component.html
+++ b/jobMarket/src/app/user/user.component.html
@@ -1,39 +1,49 @@
-<h2>Register</h2>
-<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-    <div class="form-group">
-        <label for="firstName">First Name</label>
-        <input type="text" formControlName="firstName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
-        <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
-            <div *ngIf="f.firstName.errors.required">First Name is required</div>
+<h2 style="text-align: center">{{username}}'s Profile</h2>
+
+<h3>My Skills</h3>
+<p>Purple skills have been selected</p>
+<!-- no longer needed -->
+<!-- <div id="mySkills">
+<table>
+    <tr *ngFor="let skill of userSkills">
+        <td>{{skill.skill}}</td>
+    </tr>
+</table>
+</div> -->
+<div id="skillTable">
+    <span *ngFor="let aS of antiSkills; let i = index">
+    <div class="unapplied">
+        <span id="skillButtons" *ngIf="(aS!=undefined);else skillApplied">
+            <button mat-raised-button value="aS.skillId" color="warn" (click)="addToSkills(aS)" 
+                onClick="this.disabled=true">{{aS.skill}}</button>  
+        </span>
+    </div>
+        <div class="applied">
+            <span skillApplied *ngIf="(userSkills[i]!=undefined)">
+                <button mat-raised-button class="applied" value="userSkills[i].skillId" color="primary" 
+                    (click)="deleteFromSkills(userSkills[i])">{{userSkills[i].skill}}</button>  
+            </span>
         </div>
-    </div>
-    <div class="form-group">
-        <label for="lastName">Last Name</label>
-        <input type="text" formControlName="lastName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
-        <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
-            <div *ngIf="f.lastName.errors.required">Last Name is required</div>
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
-        <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-            <div *ngIf="f.username.errors.required">Username is required</div>
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-        <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-            <div *ngIf="f.password.errors.required">Password is required</div>
-            <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
-        </div>
-    </div>
-    <div class="form-group">
-        <button [disabled]="loading" class="btn btn-primary">
-            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-            Register
-        </button>
-        <a routerLink="/login" class="btn btn-link">Cancel</a>
-    </div>
-</form>
+    </span>
+</div>
+<div id="savedVacancies">
+<h3>My Saved Vacancies</h3>
+<table>
+    <td>
+    </td>
+    <td *ngFor="let vacancy of savedVacancies, let i = index">
+        <tr><a [routerLink]="['/vacancy',vacancy.vacancyId]"><h4>{{vacancy.title}}</h4></a></tr>
+        <tr>{{vacancy.company}}</tr>
+        <tr>{{vacancy.description}}</tr>
+        <tr>{{numShared[i]}}/{{numSkills[i]}} common skills</tr>
+        <tr><strong>Common Skills:</strong></tr>
+        <tr *ngFor="let vacSkill of vacancy.vacancySkills">
+            <span *ngFor="let skill of userSkills">
+                <span *ngIf="skill.skillId==vacSkill.skillId">
+                    <td>{{vacSkill.skill}}</td>
+                </span>
+            </span>
+            </tr>
+    </td>
+</table>
+</div>
