--- a/jobMarket/src/app/vacancy-details/vacancy-details.component.html
+++ b/jobMarket/src/app/vacancy-details/vacancy-details.component.html
@@ -3,5 +3,5 @@
 <h4>{{location}} | £{{salary}}/annum</h4>
 <h5><a href="{{link}}">Apply Here</a></h5>
 <table id="skillTable"><td *ngFor="let skill of vacancySkills"><tr>{{skill.skill}}</tr></td></table>
-<p>{{description}}</p>
+<div id="description"><p>{{description}}</p></div>
 <p>{{uploadYear}} | {{postTime}}</p>
